[package]
name = "makai_waveform_db"
version = "0.1.0"
authors = ["David Gronlund"]
edition = "2021"
description = "In-memory waveform database"
readme = "README.md"
repository = "https://github.com/dagronlund/makai_waveform_db"
license = "MIT"
keywords = ["eda", "waveform"]

[dependencies]
indiscriminant = "0.2.0"

[dev-dependencies]
rand = "0.8.5"
